--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ h2 {
     top:2rem;
     right:20px;
     z-index: 1000;
+    background-color: #CB6D43;
 }
 .rotacao-botao{
     transform: rotate(-90deg);
